--- a/Patch-Pack-CN/config/voicechat/translations.properties
+++ b/Patch-Pack-CN/config/voicechat/translations.properties
@@ -6,7 +6,7 @@
 force_voicechat_kick_message=您需要%s %s才能在此服务器上进行游玩
 # The message a player gets when joining a server with an incompatible voice chat version
 # The first parameter is the mod/plugin version and the second parameter is the mod/plugin name
-voicechat_not_compatible_message=您的语音聊天版本与服务器版本不兼容。\\n请安装 %s 的 %s 版本。
+voicechat_not_compatible_message=您的语音聊天版本与服务器版本不兼容。\\n请安装%2$d的%1$d版本。
 # The message a player gets when trying to execute a command that requires voice chat
 # The first parameter is the mod/plugin name
 voicechat_needed_for_command_message=您需要在您的客户端上安装 %s 才能使用此指令
