--- a/Patch-Pack-CN/defaultconfigs/crashutilities-server.toml
+++ b/Patch-Pack-CN/defaultconfigs/crashutilities-server.toml
@@ -14,9 +14,9 @@
 	#Run a Title command on first warning
 	title = true
 	#Text to display in TitleCommand
-	titletext = "清除掉落物即将开始！"
+	titletext = "即将开始清理掉落物！"
 	#Text to Display in Chat when Item. First % will be replaced by Value. In red, encased in [=== 
-	warningtext = "物品将在 % 秒后清除"
+	warningtext = "物品将在%秒后被清除"
 
 ["Memory Checker"]
 	#Adds a Memory checker that reads currently used Memory. A command that reads out the last logged memory values, and a warning in logs when large amounts of memory get used in a small amount of time
