--- a/Patch-Pack-CN/kubejs/assets/cottagewitch/tips/modconfig.json
+++ b/Patch-Pack-CN/kubejs/assets/cottagewitch/tips/modconfig.json
@@ -1,10 +1,10 @@
 {
     "title": {
-      "text": "Modded Tips",
+      "text": "模组提示",
       "bold": true,
       "color": "green"
     },
     "tip": {
-      "text": "You can configure mods while in-game by pressing the backslash key. Note that some changes may require a restart."
+      "text": "你可以在游戏中按下反斜杠键来配置模组，有些配置需要重启游戏才能生效。"
     }
   }
