--- a/zh-CN/config/voicechat/translations.properties
+++ b/zh-CN/config/voicechat/translations.properties
@@ -3,12 +3,12 @@
 
 # The message a player gets when kicked for not having voice chat installed and the server has force_voicechat enabled
 # The first parameter is the mod/plugin name and the second parameter is the mod/plugin version
-force_voicechat_kick_message=您需要%s %s才能在此服务器上进行游玩
+force_voicechat_kick_message=\u60A8\u9700\u8981%s %s\u624D\u80FD\u5728\u6B64\u670D\u52A1\u5668\u4E0A\u8FDB\u884C\u6E38\u73A9
 # The message a player gets when joining a server with an incompatible voice chat version
 # The first parameter is the mod/plugin version and the second parameter is the mod/plugin name
-voicechat_not_compatible_message=您的语音聊天版本与服务器版本不兼容。\\n请安装%2$d的%1$d版本。
+voicechat_not_compatible_message=\u60A8\u7684\u8BED\u97F3\u804A\u5929\u7248\u672C\u4E0E\u670D\u52A1\u5668\u7248\u672C\u4E0D\u517C\u5BB9\u3002\\n\u8BF7\u5B89\u88C5%2$d\u7684%1$d\u7248\u672C\u3002
 # The message a player gets when trying to execute a command that requires voice chat
 # The first parameter is the mod/plugin name
-voicechat_needed_for_command_message=您需要在您的客户端上安装 %s 才能使用此指令
+voicechat_needed_for_command_message=\u60A8\u9700\u8981\u5728\u60A8\u7684\u5BA2\u6237\u7AEF\u4E0A\u5B89\u88C5 %s \u624D\u80FD\u4F7F\u7528\u6B64\u6307\u4EE4
 # The message a player gets when trying to execute a command that can only be executed as a player
-player_command_message=此指令只能由玩家执行
+player_command_message=\u6B64\u6307\u4EE4\u53EA\u80FD\u7531\u73A9\u5BB6\u6267\u884C
