这个包默认不是中文

--- a/zh-CN/config/vmtranslationupdate.toml
+++ b/zh-CN/config/vmtranslationupdate.toml
@@ -1,4 +1,4 @@
-autoSwitchLanguage = false
+autoSwitchLanguage = true
 checkModPackTranslationUpdate = true
 autoDownloadVMTranslationPack = true
 autoInstallVMTranslationPack = true
