--- a/zh-CN/config/vmtranslationupdate.toml
+++ b/zh-CN/config/vmtranslationupdate.toml
@@ -1,7 +1,7 @@
-autoSwitchLanguage = false
+autoSwitchLanguage = true
 checkModPackTranslationUpdate = true
-autoDownloadVMTranslationPack = true
-autoInstallVMTranslationPack = true
+autoDownloadVMTranslationPack = false
+autoInstallVMTranslationPack = false
 displayTips = true
 playerNameCheck = true
 modPackTranslationUpdateCheckUrl = "https://vmct-cn.top/modpacks/cottage/update.txt"
