--- a/zh-CN/config/vmtranslationupdate.toml
+++ b/zh-CN/config/vmtranslationupdate.toml
@@ -1,7 +1,7 @@
 autoSwitchLanguage = true
 checkModPackTranslationUpdate = true
-autoDownloadVMTranslationPack = false
-autoInstallVMTranslationPack = false
+autoDownloadVMTranslationPack = true
+autoInstallVMTranslationPack = true
 displayTips = true
 playerNameCheck = true
 modPackTranslationUpdateCheckUrl = "https://vmct-cn.top/modpacks/cottage/update.txt"
@@ -9,6 +9,6 @@ modPackTranslationUrl = "https://vmct-cn.top/modpacks/cottage/"
 tipsUrl = "https://vmct-cn.top/tips.txt"
 modPackTranslationVersion = "1.0"
 tipsMinutes = 25
-traslationPackName = "VM汉化组模组汉化包1.19"
-traslationPackUrl = "https://cdn.modrinth.com/data/IDWIdXwS/versions/acZy8zAY/VM汉化组模组汉化包1.19"
+traslationPackName = "VM汉化组春晓之巫汉化包"
+traslationPackUrl = "https://cdn.modrinth.com/data/IDWIdXwS/versions/8pmMaP6u/VM汉化组春晓之巫汉化包"
 nameUrl = "https://vmct-cn.top/name.json"
