--- a/zh-CN/config/vaultpatcher_asm/config.json
+++ b/zh-CN/config/vaultpatcher_asm/config.json
@@ -1,6 +1,6 @@
 {
   "mods": [
-    "theoneprobe-1.19","ftbbackups","Better-Fishing-Rods-1.19.2","BetterAdvancements-1.19.2","ftbquests"
+    "theoneprobe-1.19","ftbbackups","Better-Fishing-Rods-1.19.2","BetterAdvancements-1.19.2","ftbquests","davespotioneering-1.19.2-3", "cluttered-2.1.1-1.19.2"
   ],
   "debug_mode": {
     "is_enable": false,
