更新 vmtranslationupdate.toml

--- a/zh-CN/config/vmtranslationupdate.toml
+++ b/zh-CN/config/vmtranslationupdate.toml
@@ -1,4 +1,4 @@
-autoSwitchLanguage = true
+autoSwitchLanguage = false
 checkModPackTranslationUpdate = true
 autoDownloadVMTranslationPack = false
 autoInstallVMTranslationPack = false
